5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4191/executions/1716_2507.log
== TEST (2019-05-15 19:34:56) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))
pr=int(input("Peixes retirados por mes: "))

cont=0
prm=pr
qp=qi

while((qp>0)and(qp<8000)):
	qp=qp+qp*pc/100
	prm=prm+1000
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 19:35:58) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))
pr=int(input("Peixes retirados por mes: "))

cont=0
prm=pr
qp=qi

while((qp>0)and(qp<8000)):
	qp=qp+qp*pc/100
	prm=prm+1000
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 10:36:10) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))
pr=int(input("Peixes retirados por mes: "))

cont=0
prm=pr
qp=qi

while((qp>0)and(qp<8000)):
	qp=qp+qp*pc/100
	prm=prm*2
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- OUTPUT:
MAXIMO
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:48:26) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0
prm=pr
qp=qi

while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	qp=qp+qp*pc/100
	prm=prm*2
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.118608
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 6, in <module>
    prm=pr
NameError: name 'pr' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:50:53) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while((qp>0)and(qp<8000)):
NameError: name 'qp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:50:55) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.151813
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 8, in <module>
    while((qp>0)and(qp<8000)):
NameError: name 'qp' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:50:56) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while((qp>0)and(qp<8000)):
NameError: name 'qp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:50:56) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.195447
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 8, in <module>
    while((qp>0)and(qp<8000)):
NameError: name 'qp' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:50:58) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.166464
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 8, in <module>
    while((qp>0)and(qp<8000)):
NameError: name 'qp' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:51:00) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qp>0)and(qp<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    while((qp>0)and(qp<8000)):
NameError: name 'qp' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:51:26) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)and(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.188975
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:51:28) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)and(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qp<=0):
	print('ZERO')
elif(qp>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:52:07) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)and(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
elif(qi>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:52:20) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)and(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
elif(qi>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.157399
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:52:28) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)and(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
elif(qi>=8000):
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:52:56) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)and(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
else:
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:53:25) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)or(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
else:
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:53:57) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while((qi>0)or(qi<8000)):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
else:
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.196619
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:54:20) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while(0<qi<8000):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
else:
	print('MAXIMO')

	
print(cont)	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:54:23) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while(0<qi<8000):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * pc/100
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
else:
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.166658
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1716/2507/main.py", line 9, in <module>
    pr=int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:55:00) 
-- CODE:
qi=int(input("Quantidade inical de peixe: "))
pc=int(input("Percentual de crescimento: "))


cont=0


while(0<qi<8000):
	pr=int(input("Peixes retirados por mes: "))
	cresc= qi * (pc/100)
	qi= qi+cresc
	qi= qi - pr
	cont=cont+1

if(qi<=0):
	print('ZERO')
else:
	print('MAXIMO')

	
print(cont)	
	
-- EXECUTION TIME:
0.155844
-- TEST CASE 1:
---- input:
1234
56
7
8
9
10
11
---- correct output:
MAXIMO
5
---- user output:
MAXIMO
5
-- TEST CASE 2:
---- input:
5432
1
987
654
4321
---- correct output:
ZERO
3
---- user output:
ZERO
3
-- TEST CASE 3:
---- input:
2468
35
1234
900
1
2
3
4
5
---- correct output:
MAXIMO
7
---- user output:
MAXIMO
7
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
